--- a/grid.css
+++ b/grid.css
@@ -169,6 +169,19 @@ html { box-sizing: border-box; }
 	[data-layout~=cols-offset-11-sm] { grid-column-start: 11; }
 	[data-layout~=cols-offset-12-sm] { grid-column-start: 12; }
 
+	[data-layout~=rows-offset-1-sm] { grid-row-start: 1; }
+	[data-layout~=rows-offset-2-sm] { grid-row-start: 2; }
+	[data-layout~=rows-offset-3-sm] { grid-row-start: 3; }
+	[data-layout~=rows-offset-4-sm] { grid-row-start: 4; }
+	[data-layout~=rows-offset-5-sm] { grid-row-start: 5; }
+	[data-layout~=rows-offset-6-sm] { grid-row-start: 6; }
+	[data-layout~=rows-offset-7-sm] { grid-row-start: 7; }
+	[data-layout~=rows-offset-8-sm] { grid-row-start: 8; }
+	[data-layout~=rows-offset-9-sm] { grid-row-start: 9; }
+	[data-layout~=rows-offset-10-sm] { grid-row-start: 10; }
+	[data-layout~=rows-offset-11-sm] { grid-row-start: 11; }
+	[data-layout~=rows-offset-12-sm] { grid-row-start: 12; }
+
 	[data-layout~=cols-top-sm] { align-items: start; }
 	[data-layout~=cols-middle-sm] { align-items: center; }
 	[data-layout~=cols-bottom-sm] { align-items: end; }
@@ -239,6 +252,19 @@ html { box-sizing: border-box; }
 	[data-layout~=cols-offset-10-md] { grid-column-start: 10; }
 	[data-layout~=cols-offset-11-md] { grid-column-start: 11; }
 	[data-layout~=cols-offset-12-md] { grid-column-start: 12; }
+
+	[data-layout~=rows-offset-1-md] { grid-row-start: 1; }
+	[data-layout~=rows-offset-2-md] { grid-row-start: 2; }
+	[data-layout~=rows-offset-3-md] { grid-row-start: 3; }
+	[data-layout~=rows-offset-4-md] { grid-row-start: 4; }
+	[data-layout~=rows-offset-5-md] { grid-row-start: 5; }
+	[data-layout~=rows-offset-6-md] { grid-row-start: 6; }
+	[data-layout~=rows-offset-7-md] { grid-row-start: 7; }
+	[data-layout~=rows-offset-8-md] { grid-row-start: 8; }
+	[data-layout~=rows-offset-9-md] { grid-row-start: 9; }
+	[data-layout~=rows-offset-10-md] { grid-row-start: 10; }
+	[data-layout~=rows-offset-11-md] { grid-row-start: 11; }
+	[data-layout~=rows-offset-12-md] { grid-row-start: 12; }
 
 	[data-layout~=cols-top-md] { align-items: start; }
 	[data-layout~=cols-middle-md] { align-items: center; }
@@ -311,6 +337,19 @@ html { box-sizing: border-box; }
 	[data-layout~=cols-offset-11-lg] { grid-column-start: 11; }
 	[data-layout~=cols-offset-12-lg] { grid-column-start: 12; }
 
+	[data-layout~=rows-offset-1-lg] { grid-row-start: 1; }
+	[data-layout~=rows-offset-2-lg] { grid-row-start: 2; }
+	[data-layout~=rows-offset-3-lg] { grid-row-start: 3; }
+	[data-layout~=rows-offset-4-lg] { grid-row-start: 4; }
+	[data-layout~=rows-offset-5-lg] { grid-row-start: 5; }
+	[data-layout~=rows-offset-6-lg] { grid-row-start: 6; }
+	[data-layout~=rows-offset-7-lg] { grid-row-start: 7; }
+	[data-layout~=rows-offset-8-lg] { grid-row-start: 8; }
+	[data-layout~=rows-offset-9-lg] { grid-row-start: 9; }
+	[data-layout~=rows-offset-10-lg] { grid-row-start: 10; }
+	[data-layout~=rows-offset-11-lg] { grid-row-start: 11; }
+	[data-layout~=rows-offset-12-lg] { grid-row-start: 12; }
+
 	[data-layout~=cols-top-lg] { align-items: start; }
 	[data-layout~=cols-middle-lg] { align-items: center; }
 	[data-layout~=cols-bottom-lg] { align-items: end; }
@@ -381,6 +420,19 @@ html { box-sizing: border-box; }
 	[data-layout~=cols-offset-10-xl] { grid-column-start: 10; }
 	[data-layout~=cols-offset-11-xl] { grid-column-start: 11; }
 	[data-layout~=cols-offset-12-xl] { grid-column-start: 12; }
+
+	[data-layout~=rows-offset-1-xl] { grid-row-start: 1; }
+	[data-layout~=rows-offset-2-xl] { grid-row-start: 2; }
+	[data-layout~=rows-offset-3-xl] { grid-row-start: 3; }
+	[data-layout~=rows-offset-4-xl] { grid-row-start: 4; }
+	[data-layout~=rows-offset-5-xl] { grid-row-start: 5; }
+	[data-layout~=rows-offset-6-xl] { grid-row-start: 6; }
+	[data-layout~=rows-offset-7-xl] { grid-row-start: 7; }
+	[data-layout~=rows-offset-8-xl] { grid-row-start: 8; }
+	[data-layout~=rows-offset-9-xl] { grid-row-start: 9; }
+	[data-layout~=rows-offset-10-xl] { grid-row-start: 10; }
+	[data-layout~=rows-offset-11-xl] { grid-row-start: 11; }
+	[data-layout~=rows-offset-12-xl] { grid-row-start: 12; }
 
 	[data-layout~=cols-top-xl] { align-items: start; }
 	[data-layout~=cols-middle-xl] { align-items: center; }
